--- a/WeatherTest/WeatherTest.csproj
+++ b/WeatherTest/WeatherTest.csproj
@@ -32,6 +32,9 @@
     <EmbeddedResource Include="Views\WeatherPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\WeatherDetail.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -40,6 +43,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\WeatherPage.xaml.cs">
       <DependentUpon>WeatherPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\WeatherDetail.xaml.cs">
+      <DependentUpon>WeatherDetail.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
